@@ -1,16 +1,4 @@
 DIST wagon-ssh-external-1.0.tar.bz2 10082 RMD160 f5b6295ed0a5eee89649371d7343d7bd1bb18876 SHA1 6033224e2eeb3081166770b4920cccf5767be9a6 SHA256 4cbfb6ce78b244d0504c289c71462c8ec4bb2fcbef2193a1e73f8fb026fad7a9
-EBUILD wagon-ssh-external-1.0.ebuild 864 RMD160 d8582653127a3786c88bccb75bf175a5949bd680 SHA1 97c314cb39a8fc857b53e2d73efbeafa27ff81b3 SHA256 ac683509eeebe1eafd35a04a8ec0042f888899e7cc6fcb54fe019d69a0be9908
-MD5 afc94247ca170522090eaa80912f5f3a wagon-ssh-external-1.0.ebuild 864
-RMD160 d8582653127a3786c88bccb75bf175a5949bd680 wagon-ssh-external-1.0.ebuild 864
-SHA256 ac683509eeebe1eafd35a04a8ec0042f888899e7cc6fcb54fe019d69a0be9908 wagon-ssh-external-1.0.ebuild 864
-MISC ChangeLog 218 RMD160 3a1bbcef63326dc7104d92ed54b55863383f75b2 SHA1 3d061f72237e166b9acc665d79bacae165e8552e SHA256 917ad80a277d3643324b59005660f94a2622d0529e308700c73bdcea952ddda6
-MD5 20c53603a724729180caa95dba402803 ChangeLog 218
-RMD160 3a1bbcef63326dc7104d92ed54b55863383f75b2 ChangeLog 218
-SHA256 917ad80a277d3643324b59005660f94a2622d0529e308700c73bdcea952ddda6 ChangeLog 218
+EBUILD wagon-ssh-external-1.0.ebuild 807 RMD160 d2526ebfb30aa51b64ca7d315502d364afb8392a SHA1 834f5cc1a02cedfd66cb28cbb6dc9bf794b8606d SHA256 d1fcc2b9cdc007a32d7857c11db3dad69d1e218cd3d4c49d83bdb8ff4b15e968
+MISC ChangeLog 326 RMD160 982beda4c81548f014956b19f71af9b5c4f270cc SHA1 aab2533943b47d051c18d67b1d281894faac0173 SHA256 591cb600d26ae04d4992a7ab1854b0e8bbee5cb0d9c328a8c6fcd9bbf5ee4a8a
 MISC metadata.xml 157 RMD160 ab0b3741457dee7531f59c4da0f0e9e8399af084 SHA1 c37a6b9922aef61b5b3387655bccb6e3b16e0e26 SHA256 295d02c5805b0257938eb80314b371daac94b8d6ea85629a902de7a824adc0c9
-MD5 a6ec7d7724fbd068ffb39b5be56134ed metadata.xml 157
-RMD160 ab0b3741457dee7531f59c4da0f0e9e8399af084 metadata.xml 157
-SHA256 295d02c5805b0257938eb80314b371daac94b8d6ea85629a902de7a824adc0c9 metadata.xml 157
-MD5 b749f7b0ed517e5ea0421fce23b97e3d files/digest-wagon-ssh-external-1.0 268
-RMD160 0e3d51dc689f2634aa3572f25bd34467eea37627 files/digest-wagon-ssh-external-1.0 268
-SHA256 4cb136ef9a4a1002c93b24a5099f1d59ff10dc8a7a0555ce177ed475508eaa09 files/digest-wagon-ssh-external-1.0 268
